# NeuroCom

./: .gitignore  INSTALLATION.md  README.md
backend/: .env.example  manage.py  pyproject.toml  requirements.txt
backend/src/chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/src/chat/migrations/: 0001_initial.py  0002_initial.py
backend/src/chat/tests/: test_models.py  test_views.py
backend/src/chatroom/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/chatroom/migrations/: 0001_initial.py  0002_initial.py
backend/src/chatroom/tests/: test_models.py  test_urls.py  test_views.py
backend/src/common/: common_types.py  custom_api_classes.py
backend/src/files/: models.py  serializers.py  urls.py  views.py
backend/src/files/migrations/: 0001_initial.py  0002_initial.py
backend/src/neurocom/: asgi.py  base_views.py  error_responses.py  middlewares.py  mixins.py  settings.py  urls.py  utils.py  wsgi.py
backend/src/neurocom/errors/: exceptions.py  handler.py  schemas.py
backend/src/notifications/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/src/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/src/notifications/tests/: test_models.py  test_urls.py  test_views.py
backend/src/user/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/user/migrations/: 0001_initial.py
backend/src/user/tests/: test_models.py  test_urls.py  test_views.py
backend/src/user_activity/: apps.py  consumers.py  routing.py
frontend/: .env.example  babel.config.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/__tests__/: AuthContext.test.jsx  ChatContext.test.jsx  ChatroomsDropDownMenu.test.jsx  CreateChatroomForm.test.jsx  DateRenderer.test.jsx  DropDownMenu.test.jsx  EditProfileForm.test.jsx  LoginForm.test.jsx  MessageSender.test.jsx  MessageValidator.test.jsx  MessagesList.test.jsx  NavBar.test.jsx  NotificationsDropDownMenu.test.jsx  RegisterForm.test.jsx  SocialDropDownMenu.test.jsx
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ChatroomsDropDownMenu.tsx  CreateChatroomForm.tsx  DateRenderer.tsx  (+13 more)
(+59 files in other folders)
